parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@match.py-2.snap
---
source: parser/src/lexer/lexer.rs
description: "match a:\n    case 1 | 2:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "match",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 13,
        end: 17,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: BitOr,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 22,
        end: 23,
    },
    Token {
        kind: Colon,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 24,
        end: 25,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 25,
        end: 33,
    },
    Token {
        kind: Pass,
        value: None,
        start: 33,
        end: 37,
    },
]
