parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@match.py-3.snap
---
source: parser/src/lexer/mod.rs
description: "match a.b:\n    case 1:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "match",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Dot,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: Colon,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 11,
        end: 15,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 15,
        end: 19,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 20,
        end: 21,
    },
    Token {
        kind: Colon,
        value: None,
        start: 21,
        end: 22,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 22,
        end: 23,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 23,
        end: 31,
    },
    Token {
        kind: Pass,
        value: None,
        start: 31,
        end: 35,
    },
]
