parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@match.py-5.snap
---
source: parser/src/lexer/lexer.rs
description: "match a:\n    case a.b:\n        pass\n    case a:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "match",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 13,
        end: 17,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: Dot,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 20,
        end: 21,
    },
    Token {
        kind: Colon,
        value: None,
        start: 21,
        end: 22,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 22,
        end: 23,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 23,
        end: 31,
    },
    Token {
        kind: Pass,
        value: None,
        start: 31,
        end: 35,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 35,
        end: 36,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 36,
        end: 40,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 40,
        end: 44,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 45,
        end: 46,
    },
    Token {
        kind: Colon,
        value: None,
        start: 46,
        end: 47,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 47,
        end: 48,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 48,
        end: 56,
    },
    Token {
        kind: Pass,
        value: None,
        start: 56,
        end: 60,
    },
]
