parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@match.py-6.snap
---
source: parser/src/lexer/lexer.rs
description: "match a:\n    case (a, b):\n        pass\n    case {1: _ ,2: _}:\n        pass\n    case {**rest}:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "match",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 13,
        end: 17,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 19,
        end: 20,
    },
    Token {
        kind: Comma,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 22,
        end: 23,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: Colon,
        value: None,
        start: 24,
        end: 25,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 25,
        end: 26,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 26,
        end: 34,
    },
    Token {
        kind: Pass,
        value: None,
        start: 34,
        end: 38,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 38,
        end: 39,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 39,
        end: 43,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 43,
        end: 47,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 48,
        end: 49,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 49,
        end: 50,
    },
    Token {
        kind: Colon,
        value: None,
        start: 50,
        end: 51,
    },
    Token {
        kind: Identifier,
        value: Str(
            "_",
        ),
        start: 52,
        end: 53,
    },
    Token {
        kind: Comma,
        value: None,
        start: 54,
        end: 55,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 55,
        end: 56,
    },
    Token {
        kind: Colon,
        value: None,
        start: 56,
        end: 57,
    },
    Token {
        kind: Identifier,
        value: Str(
            "_",
        ),
        start: 58,
        end: 59,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 59,
        end: 60,
    },
    Token {
        kind: Colon,
        value: None,
        start: 60,
        end: 61,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 61,
        end: 62,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 62,
        end: 70,
    },
    Token {
        kind: Pass,
        value: None,
        start: 70,
        end: 74,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 74,
        end: 75,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 75,
        end: 79,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 79,
        end: 83,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 84,
        end: 85,
    },
    Token {
        kind: Pow,
        value: None,
        start: 85,
        end: 87,
    },
    Token {
        kind: Identifier,
        value: Str(
            "rest",
        ),
        start: 87,
        end: 91,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 91,
        end: 92,
    },
    Token {
        kind: Colon,
        value: None,
        start: 92,
        end: 93,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 93,
        end: 94,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 94,
        end: 102,
    },
    Token {
        kind: Pass,
        value: None,
        start: 102,
        end: 106,
    },
]
