parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@match.py-8.snap
---
source: parser/src/lexer/mod.rs
description: "match x:\n    case [a, b, c]:\n        pass\n"
input_file: parser/test_data/inputs/one_liners/match.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "match",
        ),
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "case",
        ),
        start: 13,
        end: 17,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 19,
        end: 20,
    },
    Token {
        kind: Comma,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 22,
        end: 23,
    },
    Token {
        kind: Comma,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 25,
        end: 26,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 26,
        end: 27,
    },
    Token {
        kind: Colon,
        value: None,
        start: 27,
        end: 28,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 28,
        end: 29,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 29,
        end: 37,
    },
    Token {
        kind: Pass,
        value: None,
        start: 37,
        end: 41,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 41,
        end: 42,
    },
    Token {
        kind: Dedent,
        value: Indent(
            2,
        ),
        start: 42,
        end: 42,
    },
    Token {
        kind: Dedent,
        value: None,
        start: 42,
        end: 42,
    },
]
