parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@sets.py-11.snap
---
source: parser/src/lexer/mod.rs
description: "{a for a in range(10) for b in range(10)}"
input_file: parser/test_data/inputs/one_liners/sets.py
---
[
    Token {
        kind: LeftBracket,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: For,
        value: None,
        start: 3,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: In,
        value: None,
        start: 9,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 12,
        end: 17,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 17,
        end: 18,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 18,
        end: 20,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: For,
        value: None,
        start: 22,
        end: 25,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 26,
        end: 27,
    },
    Token {
        kind: In,
        value: None,
        start: 28,
        end: 30,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 31,
        end: 36,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 36,
        end: 37,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 37,
        end: 39,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 39,
        end: 40,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 40,
        end: 41,
    },
]
